[tool.poetry]
name = "examplethree"
version = "0.1.0"
description = ""
authors = ["ahzees <matviy.stets@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.103.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pydantic = "^2.3.0"
alembic = "^1.12.0"
psycopg2 = "^2.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
